added a couple of my actual pages to portfolio page

--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <script src="main.js"></script>
 </head>
-<body>
+<body class="aboutmebod">
     <header class=aboutmemsg>Forgive me - I'm still... developing</header>
 </body>
 </html>
