--- a/index.html
+++ b/index.html
@@ -13,37 +13,9 @@
 
 <body class="indexbod">
 
-    <!-- <header>
-
-        <ul class="logo">
-            <li>
-                <a href="https://www.instagram.com/loganleopold/">
-                    <img src="images/Instagram.png" style="width:25px;height:25px;">
-                </a>
-            </li>
-            <li>
-                <a href="https://www.instagram.com/loganleopold/">
-                    <img src="images/Instagram.png" style="width:25px;height:25px;">
-                </a>
-            </li>
-            <li>
-                <a href="https://www.instagram.com/loganleopold/">
-                    <img src="images/Instagram.png" style="width:25px;height:25px;">
-                </a>
-            </li>
-            <li>
-                <a href="https://www.instagram.com/loganleopold/">
-                    <img src="images/Instagram.png" style="width:25px;height:25px;">
-                </a>
-            </li>
-        </ul>
-
-    </header>  -->
 
     <h1 class="indexh1">Thanks for stopping by</h1>
-    <p>My brand statement will go here. I have not quite arrived there in the outcomes work yet, but I'm sure it will
-        come soon. Once the statement is large enough, this section will look great. For now I'm just stretching this
-        explanation out so it will fill spcae and I can see how it will look.</p>
+    <p>When we speak you will find examples of how my inquisitive nature has lead me to broad experiences, all founded on a love of creation and of people. Whether problem-solving personal finance scenarios as a financial advisor, while working in digital business, or even through collaborating as a multi-genre drummer in studio and on tour, my passion for creative solutions has pushed me towards success in all my endeavors.</p>
 
     <ul>
         <li>
