--- a/portfoliogrid.html
+++ b/portfoliogrid.html
@@ -24,15 +24,8 @@
         </nav>
 
     <div class="container">
-            <embed src="http://merijnhos.com/" style="width:400px; height:250px;">
-            <embed src="http://merijnhos.com/" style="width:400px; height:250px;">
-            <embed src="http://merijnhos.com/" style="width:400px; height:250px;">
-            <embed src="http://merijnhos.com/" style="width:400px; height:250px;">
-            <embed src="http://merijnhos.com/" style="width:400px; height:250px;">
-            <embed src="http://merijnhos.com/" style="width:400px; height:250px;">
-            <embed src="http://merijnhos.com/" style="width:400px; height:250px;">
-            <embed src="http://merijnhos.com/" style="width:400px; height:250px;">
-            <embed src="http://merijnhos.com/" style="width:400px; height:250px;">
+            <embed src="https://loganleopold.github.io/Trivia/" style="width:400px; height:250px;">
+            <embed src="https://loganapplicationmanager.herokuapp.com/" style="width:400px; height:250px;">
     </div>
 
 </body>
