--- a/portfoliogrid.html
+++ b/portfoliogrid.html
@@ -24,7 +24,9 @@
         </nav>
 
     <div class="container">
-            <embed src="https://loganleopold.github.io/Trivia/" style="width:400px; height:250px;">
+            <label>Rolling Code</label>
+            <label>Application Manager</label>
+            <embed src="https://loganleopold.github.io/Trivia/" style="width:400px; height:250px;">                            
             <embed src="https://loganapplicationmanager.herokuapp.com/" style="width:400px; height:250px;">
     </div>
 
