trying out uptop nav instead of below

--- a/index.html
+++ b/index.html
@@ -1,33 +1,44 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Logan Leopold Developer</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-</head>
+  </head>
 
-
-
-<body class="indexbod">
-
+  <body class="indexbod">
+    <nav>
+      <ul>
+        <li>
+          <a class="nav" href="portfoliogrid.html">Portfolio</a>
+        </li>
+        <li>
+          <a class="nav" href="portfoliogrid.html">About Me</a>
+        </li>
+      </ul>
+    </nav>
 
     <h1 class="indexh1">Thanks for stopping by</h1>
-    <p>When we speak you will find examples of how my inquisitive nature has lead me to broad experiences, all founded on a love of creation and of people. Whether problem-solving personal finance scenarios as a financial advisor, while working in digital business, or even through collaborating as a multi-genre drummer in studio and on tour, my passion for creative solutions has pushed me towards success in all my endeavors.</p>
+    <p>
+      When we speak you will find examples of how my inquisitive nature has lead
+      me to broad experiences, all founded on a love of creation and of people.
+      Whether problem-solving personal finance scenarios as a financial advisor,
+      while working in digital business, or even through collaborating as a
+      multi-genre drummer in studio and on tour, my passion for creative
+      solutions has pushed me towards success in all my endeavors.
+    </p>
 
-    <ul>
-        <li>
-            <a class="nav" href=portfoliogrid.html>Portfolio</a>
-        </li>
-        <li>
-            <a class="nav" href=portfoliogrid.html>About Me</a>
-        </li>
-    </ul>
+    <!-- <ul>
+      <li>
+        <a class="nav" href="portfoliogrid.html">Portfolio</a>
+      </li>
+      <li>
+        <a class="nav" href="portfoliogrid.html">About Me</a>
+      </li>
+    </ul> -->
 
     <!-- <footer><h1></h1></footer> -->
-
-</body>
-
+  </body>
 </html>
