--- a/portfoliogrid.html
+++ b/portfoliogrid.html
@@ -24,7 +24,7 @@
     </nav>
 
     <div class="container">
-      <div class="row">
+      <div class="row d-flex">
         <div class="col-6 project">
           <label>Rolling Code</label>
           <embed
