mostly portpage bootstrap grid adjustments with some content alignment

--- a/portfoliogrid.html
+++ b/portfoliogrid.html
@@ -25,7 +25,7 @@
 
     <div class="container">
       <div class="row d-flex">
-        <div class="col-6 project">
+        <div class="col-6 justify-content-center flex-column">
           <label>Rolling Code</label>
           <embed
             src="https://loganleopold.github.io/Trivia/"
@@ -33,7 +33,7 @@
           />
         </div>
 
-        <div class="col-6 project">
+        <div class="col-6 project justify-content-center flex-column">
           <label>Application Manager</label>
           <embed
             src="https://loganapplicationmanager.herokuapp.com/"
