got rid of second project class

--- a/portfoliogrid.html
+++ b/portfoliogrid.html
@@ -33,7 +33,7 @@
           />
         </div>
 
-        <div class="col-6 project justify-content-center flex-column">
+        <div class="col-6 justify-content-center flex-column">
           <label>Application Manager</label>
           <embed
             src="https://loganapplicationmanager.herokuapp.com/"
