--- a/portfoliogrid.html
+++ b/portfoliogrid.html
@@ -33,10 +33,12 @@
         </div>
 
         <div class="col-6 justify-content-center flex-column">
-          <label>Application Manager</label>
-          <embed
-            src="https://loganapplicationmanager.herokuapp.com/"
-          />
+          <label>Application Manager
+                <embed
+                src="https://loganapplicationmanager.herokuapp.com/"
+              />
+          </label>
+          
         </div>
 
       </div>
