--- a/portfoliogrid.html
+++ b/portfoliogrid.html
@@ -25,20 +25,18 @@
 
     <div class="container">
       <div class="row d-flex">
-        <div class="col-6 justify-content-center flex-column">
+        <div class="col-6 justify-content-center align-items-center flex-column">
           <label>Rolling Code</label>
           <embed
             src="https://loganleopold.github.io/Trivia/"
           />
         </div>
 
-        <div class="col-6 justify-content-center flex-column">
-          <label>Application Manager
-                <embed
-                src="https://loganapplicationmanager.herokuapp.com/"
-              />
-          </label>
-          
+        <div class="col-6 justify-content-center align-items-center flex-column">
+          <label>Application Manager</label>
+          <embed
+          src="https://loganapplicationmanager.herokuapp.com/"
+        />        
         </div>
 
       </div>
