--- a/portfoliogrid.html
+++ b/portfoliogrid.html
@@ -33,10 +33,11 @@
         </div>
 
         <div class="col-6 justify-content-center align-items-center flex-column">
-          <label>Application Manager</label>
+              <label>Application Manager</label>
           <embed
           src="https://loganapplicationmanager.herokuapp.com/"
-        />        
+          />
+          </div>
         </div>
 
       </div>
