--- a/portfoliogrid.html
+++ b/portfoliogrid.html
@@ -6,6 +6,8 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+        crossorigin="anonymous">
     <script src="main.js"></script>
   </head>
 
@@ -24,15 +26,15 @@
     </nav>
 
     <div class="container">
-      <div class="row d-flex">
-        <div class="col-6 justify-content-center align-items-center flex-column">
+      <div class="row">
+        <div class="col-6 d-flex justify-content-center align-items-center flex-column">
           <label>Rolling Code</label>
           <embed
             src="https://loganleopold.github.io/Trivia/"
           />
         </div>
 
-        <div class="col-6 justify-content-center align-items-center flex-column">
+        <div class="col-6 d-flex justify-content-center align-items-center flex-column">
               <label>Application Manager</label>
           <embed
           src="https://loganapplicationmanager.herokuapp.com/"
