--- a/portfoliogrid.html
+++ b/portfoliogrid.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Abhaya+Libre:500,800" rel="stylesheet">
     <script src="main.js"></script>
   </head>
 
