--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="container">
                         <div class="row">
                           <div class="col-12 d-flex justify-content-center align-items-center flex-column">
-                            <label>Rolling Code</label>
+                            <label id="rollingCode">Rolling Code</label>
                             <a href="http://loganleopold.github.io/Trivia/">
                               <embed src="https://loganleopold.github.io/Trivia/"/>
                           </a>
