changed embeds to images

--- a/index.html
+++ b/index.html
@@ -48,18 +48,18 @@
                 <div class="container">
                         <div class="row">
                           <div class="col-12 d-flex justify-content-center align-items-center flex-column">
-                            <label id="rollingCode">Rolling Code</label>
-                            <a href="http://loganleopold.github.io/Trivia/">
-                              <embed src="https://loganleopold.github.io/Trivia/"/>
-                          </a>
+                            <a href="http://loganleopold.github.io/Trivia/"></a>
+                              <label>Rolling Code</label>
+                              <img src='./images/Screen-Shot-2019-04-07-at-11.52.06-PM.png'/>
+                            </a>
                           </div>
                           <div class="col-12 d-flex justify-content-center align-items-center flex-column">
-                                <label>Application Manager</label>
-                                <a href="https://ticket-trackr.surge.sh/">
-                                  <embed src="https://ticket-trackr.surge.sh/"/>
-                                </a>
-                            </div>
+                            <a href="https://ticket-trackr.surge.sh/"></a>
+                              <label>Ticket Trackr</label>
+                              <img src="./images/Screen-Shot-2019-04-07-at-11.58.06-PM.png"/>
+                            </a>
                           </div>
+                        </div>
                   
                         </div>
                       </div>
