made link plates of images

--- a/index.html
+++ b/index.html
@@ -14,16 +14,6 @@
   <body class="indexbod">
 
     <header>Logan Leopold</header>
-    <!-- <nav>
-      <ul>
-        <li>
-          <a class="nav" href="portfoliogrid.html">Portfolio</a>
-        </li>
-        <li>
-          <a class="nav" href="portfoliogrid.html">About Me</a>
-        </li>
-      </ul>
-    </nav> -->
 
     <div class="container">
       <div class="row d-flex justify-content-space-evenly w3-animate-right">
@@ -46,23 +36,27 @@
         <div class="col-6 d-flex flex-column justify-content-center align-items-center w3-animate-bottom">
 
                 <div class="container">
-                        <div class="row">
+                    <div class="row">
+                        <a href="http://loganleopold.github.io/Trivia/">
                           <div class="col-12 d-flex justify-content-center align-items-center flex-column">
-                            <a href="http://loganleopold.github.io/Trivia/"></a>
-                              <label>Rolling Code</label>
+                            <label>Rolling Code</label>
+                            <div class='imgStyle'>
                               <img src='./images/Screen-Shot-2019-04-07-at-11.52.06-PM.png'/>
-                            </a>
+                            </div>
                           </div>
+                        </a>
+                        <a href="https://ticket-trackr.surge.sh/">
                           <div class="col-12 d-flex justify-content-center align-items-center flex-column">
-                            <a href="https://ticket-trackr.surge.sh/"></a>
-                              <label>Ticket Trackr</label>
+                            <label>Ticket Trackr</label>
+                            <div class='imgStyle'>
                               <img src="./images/Screen-Shot-2019-04-07-at-11.58.06-PM.png"/>
-                            </a>
+                            </div>
                           </div>
-                        </div>
+                        </a>
+                    </div>
                   
-                        </div>
-                      </div>
+                  </div>
+                </div>
 
         </div>
 
