trying to make the site more responsive by adding some more specific col adjustments

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <div class="row d-flex justify-content-space-evenly w3-animate-right">
         <div
-          class="col-6 d-flex flex-column justify-content-center align-items-center"
+          class="col-sm-12 col-md-12 col-lg-6 col-xl-6 d-flex flex-column justify-content-center align-items-center"
         >
           <h1 class="indexh1">Thanks for stopping by</h1>
           <p>
@@ -33,7 +33,7 @@
         </div>
 
 
-        <div class="col-6 d-flex flex-column justify-content-center align-items-center w3-animate-bottom">
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 flex-column justify-content-center align-items-center w3-animate-bottom">
 
                 <div class="container">
                     <div class="row">
