applied justifications and margin to links

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="container">
                     <div class="row">
                         <a href="http://loganleopold.github.io/Trivia/">
-                          <div class="col-12 d-flex justify-content-center align-items-center flex-column">
+                          <div class="col-12 d-flex justify-content-center align-items-center flex-column linkPlate">
                             <label>Rolling Code</label>
                             <div class='imgStyle'>
                               <img src='./images/Screen-Shot-2019-04-07-at-11.52.06-PM.png'/>
@@ -46,7 +46,7 @@
                           </div>
                         </a>
                         <a href="https://ticket-trackr.surge.sh/">
-                          <div class="col-12 d-flex justify-content-center align-items-center flex-column">
+                          <div class="col-12 d-flex justify-content-center align-items-center flex-column linkPlate">
                             <label>Ticket Trackr</label>
                             <div class='imgStyle'>
                               <img src="./images/Screen-Shot-2019-04-07-at-11.58.06-PM.png"/>
